[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Items/ItemBasis/ItemSwinger/ItemSwinger.gd" type="Script" id=1]

[node name="ItemSwinger" type="Node2D"]
script = ExtResource( 1 )

[node name="Wrist" type="RemoteTransform2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="TelegraphTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
